--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nodejs demo app for running a cloud native Tekton Pipeline.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ncskier/myapp"
+    "url": "https://github.com/pon-raj/myapp"
   },
   "main": "app.js",
   "scripts": {
